Fix refactoring and c3eaa8 bugs

--- a/spec/integration/platforms/localhost/scenarios/simple_echo_scenario.yml
+++ b/spec/integration/platforms/localhost/scenarios/simple_echo_scenario.yml
@@ -6,4 +6,5 @@
 ---
 ---
 write_echo:
-  - "echo 'Hello Rundock from Scenario.' > /var/tmp/hello_rundock_from_scenario"
+  command:
+    - "echo 'Hello Rundock from Scenario.' > /var/tmp/hello_rundock_from_scenario"
