Update local echo test

--- a/spec/integration/platforms/localhost/scenarios/simple_echo_scenario.yml
+++ b/spec/integration/platforms/localhost/scenarios/simple_echo_scenario.yml
@@ -7,4 +7,4 @@
 ---
 write_echo:
   command:
-    - "echo 'Hello Rundock from Scenario.' > /var/tmp/hello_rundock_from_scenario"
+    - "echo 'Hello Rundock from Scenario.' | tee /var/tmp/hello_rundock_from_scenario"
