Fix tests(apply 0402c5)

--- a/spec/integration/platforms/localhost/scenarios/all_file_hooks_scenario.yml
+++ b/spec/integration/platforms/localhost/scenarios/all_file_hooks_scenario.yml
@@ -2,4 +2,4 @@
   command:
     - "rm -f /var/tmp/hello_rundock_from_file_hook_all_1_scenario"
     - "rm -f /var/tmp/hello_rundock_from_file_hook_all_2_scenario"
-  hook: file_all
+  hook: all
