--- a/spec/integration/scenarios/simple_file_hooks_scenario.yml
+++ b/spec/integration/scenarios/simple_file_hooks_scenario.yml
@@ -1,8 +1,10 @@
 - node: anyhost-01
   command:
     - "echo 'hookname:file_one ' > /var/tmp/hello_rundock_from_file_hook_one_scenario"
-    - "echo 'hookname:file_array_1 ' > /var/tmp/hello_rundock_from_file_hook_array_1_scenario"
-    - "echo 'hookname:file_array_2 ' > /var/tmp/hello_rundock_from_file_hook_array_2_scenario"
+    - "echo 'anyhost-01' > /var/tmp/hello_rundock_from_file_hook_array_1_scenario"
+    - "echo 'anyhost-01' > /var/tmp/hello_rundock_from_file_hook_array_2_scenario"
+    - "echo 'hookname:file_array_1 ' >> /var/tmp/hello_rundock_from_file_hook_array_1_scenario"
+    - "echo 'hookname:file_array_2 ' >> /var/tmp/hello_rundock_from_file_hook_array_2_scenario"
   hook:
     - file_one
     - file_array_1
