--- a/spec/integration/scenarios/deploy_scenario.yml
+++ b/spec/integration/scenarios/deploy_scenario.yml
@@ -1,10 +1,10 @@
-- node: localhost
+- target: localhost
   command:
     - "rm -f /var/tmp/hello_rundock_from_deploy_src_file_scenario"
     - "rm -fr /var/tmp/hello_rundock_from_deploy_src_dir_scenario"
     - "echo 'Hello Rundock from deploy Scenario.' > /var/tmp/hello_rundock_from_deploy_src_file_scenario"
     - "mkdir /var/tmp/hello_rundock_from_deploy_src_dir_scenario"
-- node: anyhost-01
+- target: anyhost-01
   command:
     - "rm -f /var/tmp/hello_rundock_from_deploy_dst_file_scenario"
     - "rm -fr /var/tmp/hello_rundock_from_deploy_dst_dir_scenario"
