--- a/spec/integration/scenarios/simple_echo_scenario.yml
+++ b/spec/integration/scenarios/simple_echo_scenario.yml
@@ -1,25 +1,27 @@
-- node: localhost
+- target: localhost
   command:
     - "rm -f /var/tmp/hello_rundock_from_scenario"
     - "echo 'Hello Rundock from Scenario.' > /var/tmp/hello_rundock_from_scenario"
-- node: anyhost-01
+- target: anyhost-01
   task:
     - echo_platform
   command:
     - "hostname"
-- node: anyhost-02
+- target: anyhost-02
   command:
     - "uname -a"
   task:
     - write_echo
 ---
 anyhost-01:
+  target_type: host
   host: 172.17.42.1
   ssh_opts:
     port: 22222
     user: tester
     key: "<replaced_by_platforms>"
 anyhost-02:
+  target_type: host
   host: "172.17.42.1"
   ssh_opts:
     port: 22222
