--- a/scenario_sample.yml
+++ b/scenario_sample.yml
@@ -3,22 +3,21 @@
 #
 # -------------------------------------------------------------------
 # ###  scenario section  ###
-# - node: <nodename>
-#   <taskname>:
-#     - <task detail>
+# - target: <target_name>
+#   <operation_name>:
+#     - <operation_detail>
 #     - :
-#   <taskname>:
-#     - <task detail>
-#     - :
-# - node: <nodename>
+#   <operation_name>:
+#     :
+# - target: <target_name>
 #   :
 # ---
-# ###  host information section  ###
-# <hostname>:
-#   host: xxx.xxx.xxx.xxx
-#   <other_attributes>:
+# ###  target information section  ###
+# <target_name>:
+#   target_type: host
+#   <target_attributes>:
 #     :
-# <hostname>:
+# <target_name>:
 #   :
 # ---
 # ###  task section  ###
@@ -38,13 +37,13 @@
 # -------------------------------------------------------------------
 #
 
-- node: 127.0.0.1
+- target: 127.0.0.1
   command:
     - "hostname"
     - "uname -a"
   hook:
     - logging
-- node: anyhost-01
+- target: anyhost-01
   task:
     - echo_platform
     - echo_users
@@ -57,6 +56,7 @@
   hook: all
 ---
 anyhost-01:
+  target_type: host
   host: 192.168.1.11
   ssh_opts:
     port: 22
