--- a/spec/integration/platforms/localhost/scenarios/file_hooks_by_option_scenario.yml
+++ b/spec/integration/platforms/localhost/scenarios/file_hooks_by_option_scenario.yml
@@ -1,10 +1,10 @@
-- node: localhost
+- target: localhost
   command:
     - "rm -f /var/tmp/hello_rundock_from_file_hook_one_scenario"
     - "rm -f /var/tmp/hello_rundock_from_file_hook_array_1_scenario"
     - "rm -f /var/tmp/hello_rundock_from_file_hook_array_2_scenario"
   hook: file_one
-- node: anyhost-01
+- target: anyhost-01
   command:
     - "echo aaa"
   hook:
