--- a/spec/integration/scenarios/task_with_args_scenario.yml
+++ b/spec/integration/scenarios/task_with_args_scenario.yml
@@ -6,11 +6,11 @@
 ---
 anyhost-01:
   target_type: host
-  host: 172.17.0.1
+  host: <replaced_by_platforms_host>
   ssh_opts:
-    port: 22222
+    port: <replaced_by_platforms_port>
     user: tester
-    key: "<replaced_by_platforms>"
+    key: "<replaced_by_platforms_key>"
 ---
 write_echo:
   command:
