--- a/spec/integration/groups/simple_host_group.yml
+++ b/spec/integration/groups/simple_host_group.yml
@@ -5,8 +5,8 @@
 ---
 anyhost-01:
   target_type: host
-  host: 172.17.0.1
+  host: <replaced_by_platforms_host>
   ssh_opts:
-    port: 22222
+    port: <replaced_by_platforms_port>
     user: tester
-    key: "<replaced_by_platforms>"
+    key: "<replaced_by_platforms_key>"
