--- a/spec/integration/scenarios/deploy_erb_scenario.yml
+++ b/spec/integration/scenarios/deploy_erb_scenario.yml
@@ -8,11 +8,11 @@
     - deploy_task
 ---
 anyhost-01:
-  host: 172.17.0.1
+  host: <replaced_by_platforms_host>
   ssh_opts:
-    port: 22222
+    port: <replaced_by_platforms_port>
     user: tester
-    key: "<replaced_by_platforms>"
+    key: "<replaced_by_platforms_key>"
 ---
 deploy_task:
   command:
