--- a/spec/integration/scenarios/file_hooks_by_option_scenario.yml
+++ b/spec/integration/scenarios/file_hooks_by_option_scenario.yml
@@ -14,8 +14,8 @@
     - file_array_2
 ---
 anyhost-01:
-  host: 172.17.0.1
+  host: <replaced_by_platforms_host>
   ssh_opts:
-    port: 22222
+    port: <replaced_by_platforms_port>
     user: tester
-    key: "<replaced_by_platforms>"
+    key: "<replaced_by_platforms_key>"
