--- a/spec/integration/scenarios/simple_plugin_scenario.yml
+++ b/spec/integration/scenarios/simple_plugin_scenario.yml
@@ -3,11 +3,11 @@
     - write_echo
 ---
 anyhost-01:
-  host: 172.17.0.1
+  host: <replaced_by_platforms_host>
   ssh_opts:
-    port: 22222
+    port: <replaced_by_platforms_port>
     user: tester
-    key: "<replaced_by_platforms>"
+    key: "<replaced_by_platforms_key>"
 ---
 write_echo:
   sample_operation:
