--- a/spec/integration/scenarios/target_group_scenario.yml
+++ b/spec/integration/scenarios/target_group_scenario.yml
@@ -19,18 +19,18 @@ target_group_02:
     - anyhost-02
 anyhost-01:
   target_type: host
-  host: 172.17.0.1
+  host: <replaced_by_platforms_host>
   ssh_opts:
-    port: 22222
+    port: <replaced_by_platforms_port>
     user: tester
-    key: "<replaced_by_platforms>"
+    key: "<replaced_by_platforms_key>"
 anyhost-02:
   target_type: host
-  host: "172.17.0.1"
+  host: "<replaced_by_platforms_host>"
   ssh_opts:
-    port: 22222
+    port: <replaced_by_platforms_port>
     user: tester
-    keys: ["<replaced_by_platforms>"]
+    keys: ["<replaced_by_platforms_key>"]
 ---
 write_echo_01:
   command:
