--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -69,5 +69,8 @@ Style/NumericPredicate:
 Style/MethodMissing:
   Enabled: false
 
+Style/FormatStringToken:
+  Enabled: false
+
 Lint/UnusedMethodArgument:
   Enabled: false
