Support simple string replace to deploy erb operation

--- a/spec/integration/platforms/localhost/scenarios/deploy_erb_scenario.yml
+++ b/spec/integration/platforms/localhost/scenarios/deploy_erb_scenario.yml
@@ -11,7 +11,7 @@
       binding:
         erb_val_1:
           type: command
-          value: 'echo "runrunrundock"'
-        erb_val_2:
-          type: command
           value: 'uname'
+        erb_val_2:
+          type: string
+          value: 'dondondonruck'
