--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -66,7 +66,10 @@ Style/NumericLiterals:
 Style/NumericPredicate:
   Enabled: false
 
-Style/MethodMissing:
+Style/MethodMissingSuper:
+  Enabled: false
+
+Style/MissingRespondToMissing:
   Enabled: false
 
 Style/FormatStringToken:
