--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,7 @@
 version: 2
 jobs:
   build:
+    machine: true
     working_directory: ~/hiracy/rundock
     parallelism: 2
     shell: /bin/bash --login
@@ -27,15 +28,14 @@ jobs:
     # VM instead of a container) see https://circleci.com/docs/2.0/executor-types/
     # To see the list of pre-built images that CircleCI provides for most common languages see
     # https://circleci.com/docs/2.0/circleci-images/
-    docker:
-    - image: circleci/build-image:ubuntu-14.04-XXL-upstart-1189-5614f37
-      command: /sbin/init
+    #docker:
+    #- image: circleci/build-image:ubuntu-14.04-XXL-upstart-1189-5614f37
+    #  command: /sbin/init
     steps:
     # Machine Setup
     #   If you break your build into multiple jobs with workflows, you will probably want to do the parts of this that are relevant in each
     # The following `checkout` command checks out your code to your working directory. In 1.0 we did this implicitly. In 2.0 you can choose where in the course of a job your code should be checked out.
     - checkout
-    - setup_remote_docker
     # Prepare for artifact and test results  collection equivalent to how it was done on 1.0.
     # In many cases you can simplify this from what is generated here.
     # 'See docs on artifact collection here https://circleci.com/docs/2.0/artifactsG/'
@@ -50,19 +50,22 @@ jobs:
     - restore_cache:
         keys:
         # This branch if available
-        - v1-dep-{{ .Branch }}-
+        - v2-dep-{{ .Branch }}-
         # Default branch if not
-        - v1-dep-master-
+        - v2-dep-master-
         # Any branch if there are none on the default branch - this should be unnecessary if you have your default branch configured correctly
-        - v1-dep-
+        - v2-dep-
     # This is based on your 1.0 configuration file or project settings
+    - run: sudo apt-get update
+    - run: sudo apt-get install gnupg2
+    - run: gpg2 --keyserver keyserver.ubuntu.com --recv-keys 7D2BAF1CF37B13E2069D6956105BD0E739499BDB
     - run: rvm get head
     - run: rvm install $RUBY_VERSIONS
     - run: rvm $RUBY_VERSIONS --verbose do gem install bundler
     - run: rvm $RUBY_VERSIONS --verbose do bundle install
     # Save dependency cache
     - save_cache:
-        key: v1-dep-{{ .Branch }}-{{ epoch }}
+        key: v2-dep-{{ .Branch }}-{{ epoch }}
         paths:
         # This is a broad list of cache paths to include many possible development environments
         # You can probably delete some of these entries
